# KnoxKit

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE.md  NOTES.md  README.md  biome.json  commitlint.config.js  commitlint.config.mjs  electron-builder.yml  electron.vite.config.ts  index.html  justfile  mise.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  paths.rs  state.rs
src-tauri/src/commands/: branches.rs  instances.rs  mod.rs  modpack.rs  mods.rs  settings.rs  setup.rs  system.rs  workshop.rs
src-tauri/src/domain/: branch.rs  instance.rs  mod.rs  mod_collection.rs  modpack.rs  settings.rs  setup.rs  system.rs  workshop.rs
src-tauri/src/services/: mod.rs  system.rs
src-tauri/src/services/instances/: disk.rs  launch.rs  mod.rs  pz.rs  pzexe.rs
src-tauri/src/services/modpack/: export.rs  import.rs  manifest.rs  mod.rs
src-tauri/src/services/setup/: detect.rs  mod.rs  steamcmd.rs
src-tauri/src/services/steamcmd/: appinfo.rs  appinfo_parser.rs  job.rs  mod.rs  parser.rs  worker.rs
src-tauri/tests/modinfo_fixtures/: crlf_comments.info  missing_id.info  multi_mod_b.info  single_mod.info
src-tauri/tests/modpack_fixtures/: dup_workshop.json  forbidden_override.json  malformed.json  unknown_schema.json  valid.json
src-tauri/tests/parser_fixtures/: appinfo_branches.txt  download_failed_private.txt  download_failed_variants.txt  download_progress_rate.txt  download_success.txt  login_retry.txt  login_steam_guard.txt  malformed.txt
src-tauri/tests/setup_fixtures/: appmanifest_108600.acf  libraryfolders.vdf
(+139 files in other folders)
