[package]
name = "knoxkit"
version = "2.0.0"
description = "Project Zomboid instance manager and modpack tool"
authors = ["Valentín Marquez"]
edition = "2024"
rust-version = "1.95"
license = "LicenseRef-Apache-2.0-Commons-Clause"

[lib]
name = "knoxkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "knoxkit"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
directories = "6.0.0"
tokio-util = "0.7.18"
futures = "0.3.32"
zip = "8.6.0"
sha2 = "0.11.0"
walkdir = "2.5.0"
chrono = { version = "0.4.44", features = ["serde"] }
# Blocking HTTP for the in-app SteamCMD download. rustls TLS only — NO
# native-tls/OpenSSL so the Windows MSVC build needs zero system deps.
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }
sysinfo = { version = "0.39.2", default-features = false, features = ["system"] }

# Windows-only Steam install-path lookup (HKCU/HKLM Valve keys).
[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[dev-dependencies]
tempfile = "3.27.0"
pretty_assertions = "1.4.1"
assert_fs = "1.1.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
codegen-units = 1
